<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extend_loan_message"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/extension_period_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/one_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_week"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/two_weeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_weeks"/>

        <RadioButton
            android:id="@+id/three_weeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_weeks"/>

    </RadioGroup>

    <TextView
        android:id="@+id/remaining_extensions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="italic"/>

</LinearLayout>